# autotools-template

./: .cproject  .gitignore  .project  AUTHORS  COPYING  INSTALL  Makefile.am  README  autoconfig.sh  autogen.sh  configure.ac
libhello/: Makefile.am  Makefile.in  hello.c
libhello/include/: libhello.h
src/: .gitignore  Makefile.am  Makefile.in  main.c
src/hello/: Makefile.am  hello.h
src/version/: .gitignore  Makefile.am  version.c  version.h
test/: Makefile.am  main.c
test/hello/: Makefile.am  hello.c
test/version/: Makefile.am  main.c  version.c
